# processing-sound-archive

./: .gitignore  .gitmodules  README.md  build.properties  build.xml  library.properties  shake  shake-processing-sound.cabal  shake.bat  shakefile.hs  stack.yaml
config/: library.cfg  linux.cfg  osx.cfg  plugins.cfg  windows.cfg
examples/Analysis/FFTSpectrum/: FFTSpectrum.pde
examples/Demos/Envelopes/: Envelopes.pde
reference/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
reference/processing/sound/: Amplitude.html  AudioDevice.html  AudioIn.html  BandPass.html  BrownNoise.html  Delay.html  Engine.html  Env.html  FFT.html  HighPass.html  LowPass.html  MethClaInterface.html  Mix.html  PinkNoise.html  Pulse.html  Reverb.html  SawOsc.html  SinOsc.html  SoundFile.html  SqrOsc.html  TriOsc.html  WhiteNoise.html  package-frame.html  package-summary.html  package-tree.html
src/cpp/: MakeFile_Linux  Makefile  Makefile_ARM  Makefile_Linux  Makefile_OSX  Makefile_Win  processing_sound_MethClaInterface.cpp
src/cpp/include/: processing_sound_MethClaInterface.h
src/processing/sound/: Amplitude.java  AudioDevice.java  AudioIn.java  BandPass.java  BrownNoise.java  Delay.java  Engine.java  Env.java  FFT.java  HighPass.java  LowPass.java  MethClaInterface.java  Mix.java  Noise.java  Oscillator.java  PinkNoise.java  Pulse.java  Reverb.java  SawOsc.java  SinOsc.java  SoundFile.java  SoundObject.java  SqrOsc.java  TriOsc.java  (+1 more)
src/scripts/: change_rundir.sh
(+12 files in other folders)
